# community

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.sh  policy.json
.github/workflows/: ci.yml  deploy.yml
docs/: auth.md  moderation.md
docs/user-guide/: README.md  getting-started.md  messages.md  moderation.md  people.md  reactions.md  rooms.md  xray.md
e2e/: chat.spec.ts  multiuser.spec.ts  package.json  playwright.config.ts
leptos-app/: Cargo.toml  index.html
leptos-app/src/: App.css  BanLock.css  Chat.css  ChatDebugHeader.css  EditableTextField.css  Header.css  LinkPreview.css  Markdown.css  MembersPanel.css  MessageContextMenu.css  MessageInput.css  MessageRow.css  ModLogPanel.css  NotificationInbox.css  ProfilePopover.css  QRCodeModal.css  Reactions.css  RoomList.css  RoomTopic.css  UserDetailPanel.css  XRay.css  auth.rs  ban_lock.rs  chat.rs  emoji.rs  fmt.rs  header.rs  index.css  link_preview.rs  main.rs  markdown.rs  members_panel.rs  mentions.rs  message_context_menu.rs  message_input.rs  message_list.rs  message_row.rs  mod_log_panel.rs  notification_inbox.rs  notification_manager.rs  (+9 more)
leptos-app/src/xray/: bus.rs  dag.rs  decode.rs  feed.rs  inspector.rs  mod.rs  system_panel.rs
model/: Cargo.toml
model/src/: lib.rs  mention_display.rs  text.rs
server/: Cargo.toml
server/src/: main.rs  oidc.rs
server/src/workers/: mentions.rs  mod.rs  og.rs  ssrf.rs  unfurl.rs
server/tests/: model_pin_tests.rs  policy_scope_tests.rs
