[package]
name = "leptos-app"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.12", features = ["csr"] }
console_error_panic_hook = "0.1"
ankurah = { version = "=0.9.0", features = ["derive", "wasm"] }
community-model = { path = "../model", features = ["wasm"] }
ankurah-storage-indexeddb-wasm = "=0.9.0"
ankurah-signals = { version = "=0.9.0", features = ["reactive-graph"] }
# JWT auth on wasm: client only calls parse_claims_unverified + JwtContext::from_claims
# (pure-rust crypto; never generates/signs). No features needed on wasm.
ankurah-jwt-auth = "=0.9.0"
wasm-bindgen-futures = "=0.4.55"
ankurah-websocket-client-wasm = "=0.9.0"
ankurah-virtual-scroll = "0.9.0"
web-sys = { version = "=0.3.82", features = [
    "Window", "Location", "UrlSearchParams", "Url", "History", "Element", "DomRect", "Node", "NodeList", "EventTarget", "HtmlElement", "Storage",
    "AudioContext", "AudioBuffer", "AudioBufferSourceNode", "GainNode", "AudioParam", "AudioNode",
    "AudioDestinationNode", "AudioContextState", "Response", "Document",
    "Request", "RequestInit", "Headers", "RequestMode",
    # X-ray node card: raw IndexedDB entity/event counts (no ankurah storage-stats API yet).
    "Event", "IdbFactory", "IdbOpenDbRequest", "IdbRequest", "IdbDatabase", "IdbTransaction", "IdbTransactionMode", "IdbObjectStore",
    # Multiline composer (#50): textarea autosize + caret access.
    "HtmlTextAreaElement", "CssStyleDeclaration",
    # Tail pinning through async row growth (chat.rs auto-scroll).
    "ResizeObserver"
] }
js-sys = "=0.3.82"
tracing-wasm = "0.2.1"
tracing = "0.1.41"
lazy_static = "1.5.0"
send_wrapper = "0.6.0"
# Pin the wasm-bindgen family to a set compatible with ankurah-signals 0.9.0
# (newer wasm-bindgen breaks its build); Cargo.lock is gitignored so generated
# projects resolve fresh and would otherwise pick an incompatible version.
wasm-bindgen = "=0.2.105"
qrcode = "0.14.1"
# Markdown subset for message rendering (#9). Events are mapped to typed leptos
# view nodes (never innerHTML); default features (html renderer, getopts) are
# deliberately off — we only use the pull parser.
pulldown-cmark = { version = "=0.13.4", default-features = false }

# X-ray inspector: decode ankurah's yrs backend diffs (encode_diff_v2) into
# "+n/−n" summaries. Pinned to the exact version ankurah-core 0.9.0 resolves
# to (see Cargo.lock) so the graph carries a single yrs copy — no skew.
yrs = "=0.24.0"

# PKCE (S256) + parsing small OIDC/session JSON responses on the client.
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

##### wasm: force the "js" RNG backend for getrandom 0.2 (pulled transitively via
##### ankurah's rand 0.8). getrandom 0.3+ is handled by .cargo/config.toml rustflags.
getrandom = { version = "0.2", features = ["js"] }
#####
