[package]
name = "community-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ankurah = { version = "=0.9.0" }
ankurah-websocket-server = { version = "=0.9.0" }
ankurah-storage-sled = { version = "=0.9.0", optional = true }
ankurah-storage-postgres = { version = "=0.9.0", optional = true }
# JWT policy agent. `watcher` is required (not just for hot-reload): it publishes
# the policy + verifying public key into the `jwtpolicy` collection so ephemeral
# clients can sync it — without it the client's local policy is deny-all.
ankurah-jwt-auth = { version = "=0.9.0", features = ["watcher"] }
community-model = { path = "../model" }

anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
# Worker supervision: catch_unwind on the consumer futures so a panic inside
# one respawns it instead of silently killing derived-data production.
# Already in the build transitively (axum/ankurah); declared for direct use.
futures-util = "0.3"
# `sync`/`time` back the workers' channels and fetch budgets (already in the
# build transitively via ankurah/reqwest; declared because we use them directly).
tokio = { version = "1.38", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# OIDC: validate idp.to ID tokens (RS256 via JWKS) and fetch the JWKS.
# reqwest is rustls-only (no openssl) and doubles as the unfurl worker's
# HTTP client; `url` is reqwest's own URL type (same crate, zero new code)
# taken directly so the SSRF guard can match on url::Host.
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"

[features]
# Storage engine for the durable (server) node. `cargo generate` sets `default`
# to your choice (Sled or Postgres); dev.sh reads it back to decide whether to
# bring up a Postgres container. Change the default here to switch engines.
default = ["postgres"]
sled = ["dep:ankurah-storage-sled"]
postgres = ["dep:ankurah-storage-postgres"]
